--- a/LoanApi/LoanApi.Api/appsettings.json
+++ b/LoanApi/LoanApi.Api/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "LoanDatabase": ""
+    "LoanDatabase": "Data Source=loanapi.db"
   },
   "Logging": {
     "LogLevel": {
