--- a/LoanApi/LoanApi.Application/LoanApi.Application.csproj
+++ b/LoanApi/LoanApi.Application/LoanApi.Application.csproj
@@ -7,4 +7,7 @@
   <ItemGroup>
     <ProjectReference Include="..\\LoanApi.Domain\\LoanApi.Domain.csproj" />
   </ItemGroup>
+  <ItemGroup>
+    <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="12.0.1" />
+  </ItemGroup>
 </Project>
