--- a/LoanApi/LoanApi.Application/LoanApi.Application.csproj
+++ b/LoanApi/LoanApi.Application/LoanApi.Application.csproj
@@ -5,9 +5,10 @@
     <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
   <ItemGroup>
-    <ProjectReference Include="..\\LoanApi.Domain\\LoanApi.Domain.csproj" />
+    <ProjectReference Include="..\LoanApi.Domain\LoanApi.Domain.csproj" />
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="12.0.1" />
+    <PackageReference Include="FluentValidation" Version="11.9.2" />
   </ItemGroup>
 </Project>
