Add JWT authentication and password hashing

--- a/LoanApi/LoanApi.Api/appsettings.Development.json
+++ b/LoanApi/LoanApi.Api/appsettings.Development.json
@@ -4,5 +4,11 @@
       "Default": "Debug",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "Jwt": {
+    "Issuer": "LoanApi",
+    "Audience": "LoanApi.DevClient",
+    "Secret": "SuperSecretSigningKeyForLoanApiDev123!",
+    "ExpiryMinutes": 120
   }
 }
