--- a/LoanApi/LoanApi.Api/appsettings.json
+++ b/LoanApi/LoanApi.Api/appsettings.json
@@ -2,6 +2,12 @@
   "ConnectionStrings": {
     "LoanDatabase": "Data Source=loanapi.db"
   },
+  "Jwt": {
+    "Issuer": "LoanApi",
+    "Audience": "LoanApi.Client",
+    "Secret": "SuperSecretSigningKeyForLoanApi123!",
+    "ExpiryMinutes": 60
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
