--- a/LoanApi/LoanApi.Application/LoanApi.Application.csproj
+++ b/LoanApi/LoanApi.Application/LoanApi.Application.csproj
@@ -5,6 +5,9 @@
     <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
   <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.Identity.Core" Version="8.0.8" />
+  </ItemGroup>
+  <ItemGroup>
     <ProjectReference Include="..\LoanApi.Domain\LoanApi.Domain.csproj" />
   </ItemGroup>
   <ItemGroup>
