--- a/LoanApi/LoanApi.Infrastructure/LoanApi.Infrastructure.csproj
+++ b/LoanApi/LoanApi.Infrastructure/LoanApi.Infrastructure.csproj
@@ -12,6 +12,7 @@
     </PackageReference>
     <PackageReference Include="Microsoft.EntityFrameworkCore.InMemory" Version="8.0.8" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="8.0.8" />
+    <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="7.5.1" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\\LoanApi.Application\\LoanApi.Application.csproj" />
