Add Serilog logging configuration

--- a/LoanApi/LoanApi.Api/appsettings.json
+++ b/LoanApi/LoanApi.Api/appsettings.json
@@ -2,6 +2,40 @@
   "ConnectionStrings": {
     "LoanDatabase": "Data Source=loanapi.db"
   },
+  "Serilog": {
+    "Using": [ "Serilog.Sinks.Console", "Serilog.Sinks.File", "Serilog.Sinks.SQLite" ],
+    "MinimumLevel": {
+      "Default": "Information",
+      "Override": {
+        "Microsoft": "Warning",
+        "System": "Warning"
+      }
+    },
+    "WriteTo": [
+      {
+        "Name": "Console"
+      },
+      {
+        "Name": "File",
+        "Args": {
+          "path": "Logs/log-.txt",
+          "rollingInterval": "Day"
+        }
+      },
+      {
+        "Name": "SQLite",
+        "Args": {
+          "connectionString": "Data Source=loanapi.db",
+          "tableName": "Logs",
+          "autoCreateSqlTable": true
+        }
+      }
+    ],
+    "Enrich": [ "FromLogContext", "WithMachineName", "WithThreadId" ],
+    "Properties": {
+      "Application": "LoanApi"
+    }
+  },
   "Jwt": {
     "Issuer": "LoanApi",
     "Audience": "LoanApi.Client",
