Seed accountant user from configuration

--- a/LoanApi/LoanApi.Api/appsettings.Development.json
+++ b/LoanApi/LoanApi.Api/appsettings.Development.json
@@ -13,5 +13,10 @@
     "Audience": "LoanApi.DevClient",
     "Secret": "SuperSecretSigningKeyForLoanApiDev123!",
     "ExpiryMinutes": 120
+  },
+  "AccountantUser": {
+    "Username": "accountant",
+    "Email": "accountant@loanapi.com",
+    "Password": "Accountant123!"
   }
 }
