--- a/LoanApi/LoanApi.Api/appsettings.json
+++ b/LoanApi/LoanApi.Api/appsettings.json
@@ -48,5 +48,10 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "AccountantUser": {
+    "Username": "accountant",
+    "Email": "accountant@loanapi.com",
+    "Password": "Accountant123!"
+  }
 }
